# databend-meta

./: .gitattributes  .gitignore  .typos.toml  Cargo.toml  Makefile  README.md  clippy.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/workflows/: audit.yml  ci.yml
crates/client/: Cargo.toml
crates/client/client/: Cargo.toml
crates/client/client/src/: channel_manager.rs  client_handle.rs  established_client.rs  grpc_action.rs  grpc_client.rs  kvapi_impl.rs  lib.rs  message.rs  required.rs
crates/client/client/tests/it/: grpc_client.rs  grpc_server.rs
crates/client/kvapi-test-suite/: Cargo.toml
crates/client/kvapi-test-suite/src/: kvapi_test_suite.rs
crates/client/kvapi-tests/: Cargo.toml
crates/client/kvapi-tests/tests/it/: metasrv_builder.rs
crates/client/kvapi/src/: api.rs  dir_name.rs  helper.rs  item.rs  key.rs  key_builder.rs  key_codec.rs  key_parser.rs  kv_api_ext.rs  lib.rs  message.rs  pair.rs  testing.rs  value.rs  value_with_name.rs
crates/client/kvapi/src/kvapi/: api.rs  helper.rs  key.rs  kv_api_ext.rs  mod.rs
crates/client/src/: channel_manager.rs  client_conf.rs  client_handle.rs  established_client.rs  grpc_action.rs  grpc_client.rs  kvapi_impl.rs  lib.rs  message.rs  rpc_handler.rs
crates/client/tests/it/: grpc_client.rs  grpc_server.rs
crates/common/test-harness/src/: harness.rs  lib.rs  service.rs
crates/common/types/: Cargo.toml  build.rs
crates/common/types/proto/: log_entry.proto  meta.proto  raft.proto  request.proto
crates/common/types/src/: applied_state.rs  lib.rs  message.rs  raft_types.rs
crates/common/types/src/cmd/: mod.rs
crates/common/types/src/errors/: meta_api_errors.rs  meta_errors.rs  meta_raft_errors.rs  mod.rs
crates/common/types/src/kv_transaction/: convert.rs  display.rs  mod.rs  operation.rs
crates/common/types/src/log_entry/: convert.rs  mod.rs
crates/common/types/src/proto_ext/: fetch_increase_u64_response_ext.rs  kv_transaction_reply_ext.rs  mod.rs  put_sequential_ext.rs  raft_types_ext.rs  txn_condition_ext.rs  txn_delete_by_prefix_request_ext.rs  txn_op_ext.rs  txn_op_response_ext.rs  txn_put_request_ext.rs  txn_put_response_ext.rs  txn_reply_ext.rs  txn_request_ext.rs  vote_response_ext.rs
crates/common/types/tests/it/: error_types.rs  main.rs  txn_serde.rs
crates/common/version/: Cargo.toml
crates/common/version/src/: changes.md  compatibility_algorithm.md  feat.rs  feature_span.rs  grpc_changelog.rs  grpc_feat.rs  grpc_spec.rs  lib.rs  raft_feat.rs  raft_spec.rs  spec.rs
crates/kvapi/: Cargo.toml
crates/kvapi-test-suite/src/: kvapi_test_suite.rs
crates/kvapi-tests/tests/it/: main.rs  metasrv_builder.rs  test_kv_api.rs
crates/kvapi/src/kvapi/: api.rs  item.rs  kv_api_ext.rs  message.rs  pair.rs
crates/raft-store/: Cargo.toml
crates/raft-store/src/: config.rs  key_spaces.rs
crates/raft-store/src/leveled_store/: db_exporter.rs  db_impl_scoped_seq_bounded_read.rs  db_open_snapshot_impl.rs
crates/raft-store/src/leveled_store/immutable_data/: compact_into_stream.rs
crates/raft-store/src/leveled_store/immutable_levels/: compact_all.rs
crates/raft-store/src/ondisk/: header.rs  mod.rs  upgrade_to_v004.rs
crates/raft-store/src/raft_log_v004/: callback.rs  codec_wrapper.rs  raft_log_types.rs
crates/raft-store/src/sm_v003/: receiver_v003.rs  sm_v003.rs  sm_v003_kv_api.rs  snapshot_store_v003.rs  writer_v003.rs
crates/raft-store/src/state/: raft_state_kv.rs
crates/raft-store/src/state_machine/: log_meta.rs  snapshot_id.rs  state_machine_meta.rs
crates/raft-store/tests/it/: config.rs  types.rs
crates/runtime-api/: Cargo.toml
crates/runtime-api/src/: tokio_impl.rs
crates/server/raft-store/: Cargo.toml
crates/server/raft-store/src/: config.rs  lib.rs  meta_startup_error.rs  state_machine_api_ext.rs
crates/server/raft-store/src/applier/: applier_test.rs  mod.rs
crates/server/raft-store/src/leveled_store/: db_builder.rs  db_impl_scoped_seq_bounded_read.rs  db_scoped_seq_bounded_read_test.rs  sys_data.rs  sys_data_api.rs
crates/server/raft-store/src/raft_log_v004/: callback_data.rs  importer.rs  io_desc.rs  log_store_meta.rs  raft_log_io_error.rs
crates/server/raft-store/src/sm_v003/: adapter.rs  compact_with_db_test.rs  received.rs  sm_v003_kv_api.rs  sm_v003_test.rs  snapshot_store_error.rs
crates/server/raft-store/src/state_machine/: testing.rs
crates/server/raft-store/tests/it/: config.rs  raft_log_v004_recovery.rs
crates/server/service/: Cargo.toml
crates/server/service/src/: lib.rs  message.rs  network.rs  raft_version.rs  request_handling.rs  util.rs
crates/server/service/src/analysis/: request_histogram.rs
crates/server/service/src/configs/: inner.rs
crates/server/sled-store/: Cargo.toml
crates/server/sled-store/src/: bytes_error.rs  db.rs  lib.rs  sled_key_space.rs  sled_serde.rs
crates/service/: Cargo.toml
crates/service/src/: network.rs  raft_client.rs  request_handling.rs  version.rs
crates/service/src/analysis/: count_prefix.rs  request_histogram.rs
crates/service/src/api/: grpc_server.rs
crates/service/src/configs/: inner.rs
crates/service/src/meta_node/: meta_node.rs  meta_worker.rs
crates/service/src/meta_service/: forwarder.rs
crates/service/src/metrics/: meta_metrics.rs
crates/service/tests/it/: store.rs
crates/sled-store/src/: sled_serde_impl.rs
crates/test-harness/: Cargo.toml
crates/test-harness/src/: service.rs
crates/types/proto/: meta.proto  request.proto
crates/types/src/errors/: meta_network_errors.rs  mod.rs
crates/types/src/proto_ext/: boolean_expression_ext.rs  keys_count_ext.rs  raft_types_ext.rs  txn_condition_ext.rs  txn_delete_by_prefix_request_ext.rs  txn_delete_by_prefix_response_ext.rs  txn_delete_request_ext.rs  txn_delete_response_ext.rs  txn_op_ext.rs  txn_put_request_ext.rs  txn_put_response_ext.rs  txn_request_ext.rs  vote_request_ext.rs
crates/types/tests/it/: cluster.rs  txn_serde.rs
crates/version/src/: changes.md  compatibility_algorithm.md  digit_version.rs  features.rs  lib.rs  spec.rs  version.rs
docs/: README.md  compat.py
(+77 files in other folders)
