[workspace.package]
version = "260217.0.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[workspace]
resolver = "2"
members = [
    "crates/common/types",
    "crates/common/runtime-api",
    "crates/common/version",
    "crates/common/test-harness",
    "crates/client/kvapi",
    "crates/client/kvapi-test-suite",
    "crates/client/kvapi-tests",
    "crates/client/client",
    "crates/server/sled-store",
    "crates/server/raft-store",
    "crates/server/service",
]

# Workspace dependencies
[workspace.dependencies]
# Internal crates
databend-meta = { path = "crates/server/service" }
databend-meta-client = { path = "crates/client/client" }
databend-meta-kvapi = { path = "crates/client/kvapi" }
databend-meta-kvapi-test-suite = { path = "crates/client/kvapi-test-suite" }
databend-meta-kvapi-tests = { path = "crates/client/kvapi-tests" }
databend-meta-raft-store = { path = "crates/server/raft-store" }
databend-meta-runtime-api = { path = "crates/common/runtime-api" }
databend-meta-sled-store = { path = "crates/server/sled-store" }
databend-meta-test-harness = { path = "crates/common/test-harness" }
databend-meta-types = { path = "crates/common/types" }
databend-meta-version = { path = "crates/common/version" }

# External dependencies from databendlabs forks
databend-base = "0.2.10"
map-api = "0.4.2"
openraft = { version = "0.10.0", features = ["serde", "tracing-log"] }
sled = { version = "0.34", default-features = false }
state-machine-api = "0.3.4"

# Standard crates
anyerror = "=0.1.13"
anyhow = "1.0.65"
arrow-flight = { version = "56", features = ["flight-sql-experimental", "tls-ring"] }
async-backtrace = "0.2"
async-trait = "0.1.89"
backon = "1"
bincode = { version = "2.0.0-rc.3", features = ["serde", "std", "alloc"] }
byteorder = "1.5.0"
chrono = { version = "0.4.40", features = ["serde"] }
deepsize = "0.2.0"
derive_more = { version = "2.1.1", features = ["full"] }
display-more = "0.2.5"
env_logger = "0.11"
fastrace = { version = "0.7.14", features = ["enable"] }
feature-set = "0.1.1"
fs_extra = "1.3.0"
futures = "0.3.24"
futures-async-stream = "0.2.7"
futures-util = "0.3.24"
hickory-resolver = "0.25"
hostname = "0.3.1"
itertools = "0.13.0"
log = { version = "0.4.27", features = ["serde", "kv_serde", "kv_unstable_std"] }
logcall = "0.1.9"
maplit = "1.0.2"
num = { version = "0.4.0", features = ["std"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
num_cpus = "1.17"
once_cell = "1.15.0"
parking_lot = "0.12.1"
pretty_assertions = "1.3.0"
prometheus-client = "0.22"
prost = "0.13"
prost-build = "0.13"
raft-log = "0.3.0"
rand = { version = "0.8.5", features = ["small_rng", "serde1"] }
regex = "1.8.1"
rmp-serde = "1.1.1"
rotbl = { version = "0.2.9", features = [] }
rustls = { version = "0.23.27", features = ["ring", "tls12"], default-features = false }
semver = "1.0.14"
seq-marked = { version = "0.3.5", features = ["seq-marked-serde", "seq-marked-bincode", "seqv-serde"] }
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = { version = "1.0.85", default-features = false, features = ["preserve_order", "unbounded_depth"] }
stream-more = "0.1.3"
strum = "0.24.1"
strum_macros = "0.24"
tempfile = "3.4.0"
test-harness = "0.3.0"
thiserror = "1"
tokio = { version = "1.35.0", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tonic = { version = "0.13", features = ["transport", "codegen", "tls-native-roots"] }
tonic-build = "0.13"
tonic-reflection = "0.14"
watcher = "0.5.0"

[workspace.lints.rust]
async_fn_in_trait = "allow"

[workspace.lints.clippy]
useless_format = "allow"
mutable_key_type = "allow"
result_large_err = "allow"
map_entry = "allow"

[profile.release]
debug = 1
lto = "thin"
overflow-checks = false
opt-level = "s"
incremental = false
codegen-units = 1

[profile.dev]
split-debuginfo = "unpacked"
overflow-checks = true
incremental = true

# Optimize slow crates in dev builds
# (commented out - these packages are not in this workspace)
# [profile.dev.package]
# addr2line = { opt-level = 3 }
# adler = { opt-level = 3 }
# gimli = { opt-level = 3 }
# miniz_oxide = { opt-level = 3 }
# object = { opt-level = 3 }
# rustc-demangle = { opt-level = 3 }

[profile.test]
opt-level = 0
debug = true
codegen-units = 16
lto = false
debug-assertions = true
overflow-checks = true
rpath = true

[patch.crates-io]
async-backtrace = { git = "https://github.com/datafuse-extras/async-backtrace.git", rev = "dea4553" }
databend-base = { git = "https://github.com/databendlabs/databend-base", tag = "v0.2.10" }
map-api = { git = "https://github.com/databendlabs/map-api", tag = "v0.4.2" }
openraft = { git = "https://github.com/databendlabs/openraft", tag = "v0.10.0-alpha.13" }
sled = { git = "https://github.com/datafuse-extras/sled", tag = "v0.34.7-datafuse.1" }
state-machine-api = { git = "https://github.com/databendlabs/state-machine-api.git", tag = "v0.3.4" }
watcher = { git = "https://github.com/databendlabs/watcher", tag = "v0.5.0" }
