[package]
name = "databend-meta-client"
description = "common meta grpc"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyerror = { workspace = true }
arrow-flight = { workspace = true }
async-backtrace = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
databend-base = { workspace = true }
databend-meta-kvapi = { workspace = true }
databend-meta-kvapi-test-suite = { workspace = true }
databend-meta-runtime-api = { workspace = true }
databend-meta-types = { workspace = true }
databend-meta-version = { workspace = true }
derive_more = { workspace = true }
display-more = { workspace = true }
fastrace = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
logcall = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[features]
transaction-v2 = []
txn-put-match-seq = ["databend-meta-types/txn-put-match-seq", "databend-meta-version/txn-put-match-seq"]

[dev-dependencies]
anyhow = { workspace = true }
databend-meta-version = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
