[package]
name = "databend-meta-kvapi-tests"
description = "Integration tests for KVApi against a real metasrv cluster"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[lib]
doctest = false
test = false

[[test]]
name = "it"
path = "tests/it/main.rs"

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
databend-meta-client = { workspace = true }
databend-meta-kvapi = { workspace = true }
databend-meta-kvapi-test-suite = { workspace = true }
databend-meta-runtime-api = { workspace = true }
databend-meta-test-harness = { workspace = true }
fastrace = { workspace = true }
log = { workspace = true }
test-harness = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
