[package]
name = "databend-meta-version"
description = "Version information for databend-meta"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[dependencies]
semver = { workspace = true }

[lints]
workspace = true
